Add download link to config

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ name: "Anchor CMS"
 description: "Help on how to use Anchor"
 avatar: "https://avatars1.githubusercontent.com/u/1433533?s=300"
 repository: https://github.com/anchorcms/anchor-docs
+download_link: "https://anchorcms.com/download"
 
 # Networks
 networks:
