--- a/_config.yml
+++ b/_config.yml
@@ -3,27 +3,47 @@ exclude:
 - README.md
 - LICENSE
 - CNAME
+- Gemfile
+- Gemfile.lock
+- .jekyll-cache
 
 # Gems
-gems:
+plugins:
 - jekyll-sitemap
 - jekyll-mentions
-- jemoji
 - jekyll-paginate
+- jekyll-seo-tag
+- jekyll-redirect-from
+- jekyll-default-layout
+- jekyll-feed
+- jekyll-commonmark
+- jekyll-include-cache
+- jemoji
+
+# Gem settings
+paginate: 8 # jekyll-paginate > items per page
+paginate_path: blog/page:num # jekyll-paginate > blog page
+jekyll-mentions: https://twitter.com # jekyll-mentions > service used when @replying
+twitter:
+  username: AnchorCMS # jekyll-seo-tag > Owners twitter username
+social: # jekyll-seo-tag > social overrides
+  name: Anchor CMS # jekyll-seo-tag > real name
+  links:  # jekyll-seo-tag > social aliases (sameAs)
+    - https://twitter.com/AnchorCMS
+    - https://www.facebook.com/AnchorCMS
+    - https://github.com/AnchorCMS
 
 # SCSS
 sass:
   style: :compressed
 
 # Permalinks
-permalink: pretty
-
+permalink: '/posts/:slug/'
 excerpt_separator: <!-- more -->
-
 jekyll-mentions: https://twitter.com
 
 # Site info
-url: "http://docs.anchorcms.com"
+url: "/docs/"
 title: "Anchor CMS Documentation"
 name: "Anchor CMS"
 description: "Help on how to use Anchor"
